xscode banner and button to open the chat added

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -194,5 +194,7 @@
   "view-in-github": "View on GitHub",
   "view-source": "View source",
   "viewport": "Viewport",
-  "vuetify": "Vuetify"
+  "vuetify": "Vuetify",
+  "vuetify-support": "Vuetify Support",
+  "xscode": "Chat with an expert"
 }
