--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -20,6 +20,7 @@
   "breakpoints": "Breakpoints",
   "business": "Business",
   "cancel": "Cancel",
+  "chat-with-an-expert": "Chat with an expert",
   "close": "Close",
   "code": "Code",
   "codepen-template": "Codepen template",
